--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hono/node-server": "^1.13.2",
     "@hono/swagger-ui": "^0.4.1",
     "@hono/zod-openapi": "^0.16.4",
+    "@scalar/hono-api-reference": "^0.5.166",
     "dotenv": "^16.4.5",
     "hono": "^4.6.6",
     "js-yaml": "^4.1.0",
